--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Android Build
       uses: vgaidarji/android-github-actions-build@v1.0.1
       with:
-        args: "./gradle assembleRelease"
+        args: "./gradlew assembleRelease"
         
