--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //other imports
+    implementation 'com.android.support:palette-v7:29.0.0'
+
 }
